# md2paper

./: Cargo.toml  DESIGN_SPEC.md  README.ko.md  README.md
crates/md2paper-cli/: Cargo.toml
crates/md2paper-cli/src/: main.rs  preview.rs  watch.rs
crates/md2paper-core/: Cargo.toml
crates/md2paper-core/src/: config.rs  lib.rs  parser.rs  transform.rs
crates/md2paper-core/tests/: convert_test.rs
crates/md2paper-render/: Cargo.toml
crates/md2paper-render/src/: lib.rs  render.rs  world.rs
crates/md2paper-theme/: Cargo.toml
crates/md2paper-theme/src/: inject.rs  lib.rs  loader.rs  model.rs
crates/md2paper-theme/tests/: theme_test.rs
docs/superpowers/plans/: 2026-03-19-readme-redesign.md
docs/superpowers/specs/: 2026-03-19-readme-redesign-design.md
tests/fixtures/: basic.md  cjk.md  full_featured.md  gfm_table.md  math.md
tests/integration/: convert_test.rs  theme_test.rs
themes/: academic.toml  default.toml  minimal.toml  newspaper.toml
