[package]
name = "md2paper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
comrak = { workspace = true }
md2paper-theme = { path = "../md2paper-theme" }
md2paper-render = { path = "../md2paper-render" }
serde_json = { workspace = true }
